--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-device-detect": "^2.2.3",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "styled-components": "^6.1.13"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,8 +29,5 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
-  },
-  "resolutions": {
-    "styled-components": "^5"
   }
 }
